adds spring booster waffle

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2944,7 +2944,7 @@ cards:
         fields:
           - label: Number of vaccinations
             << : *vaccinationAgeDemographics75Plus
-            tooltip: Toal number of people who received a spring booster of COVID-19 vaccine
+            tooltip: Total number of people who received a spring booster of COVID-19 vaccine
             type: bar
             colour: 0
             rollingAverage: false
@@ -2972,6 +2972,56 @@ cards:
 
           - label: "Total vaccinations: 75+"
             metric: cumPeopleVaccinatedSpring22ByVaccinationDate
+            value: vaccinationsAgeDemographics
+            type: numeric
+            filters:
+              parameter: age
+              value: 75+
+
+      - heading: About
+        tabType: metadata
+        filename: cardMetadata/deaths/cardDeathsAndRatesByAgeUnderOver60.md
+
+##############################################################################################################################
+
+# Spring booster waffle chart
+
+  - heading: Latest spring booster vaccintion uptake (75+), by vaccination date
+    cardType: tabContentRaw
+    locationAware:
+      excluded:
+        areaType:
+          - overview
+
+    fullWidth: false
+    abstract: > 
+      Latest total percentage of people aged 75 and over who have received a spring booster COVID-19 vaccination.
+      The denominator is the number of people aged 75 and over on the National Immunisation Management
+      Service (NIMS) database.
+
+    download:
+      - vaccinationsAgeDemographics
+
+    tabs:
+      - heading: Chart
+        tabType: percentageWaffle
+
+        fields:
+          label: Spring booster dose (%)
+          << : *vaccinationAgeDemographics75Plus
+          tooltip: Total percentage of people who received a spring booster dose of COVID-19 vaccine
+          colour: 1
+          metric: cumPeopleVaccinatedSpring22ByVaccinationDate
+
+      - heading: Data table
+        tabType: nestedTable
+        fields:
+          - label: Vaccination date
+            value: date
+            type: date
+
+          - label: "Spring booster dose (%)"
+            metric: cumVaccinationSpring22UptakeByVaccinationDatePercentage
             value: vaccinationsAgeDemographics
             type: numeric
             filters:
