--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -3120,8 +3120,8 @@ cards:
     fullWidth: false
     abstract: >
       Percentage of people who have received a spring booster COVID-19 vaccination, by age group.
-      The denominator is the number of people aged 75 and over on the National Immunisation Management
-      Service (NIMS) database.
+      The denominator is the number of people on the National Immunisation Management
+      Service (NIMS) database, within the relevent age group.
     
     download:
       - vaccinationsAgeDemographics
